fixes #152 remove z-index causing problems

--- a/leaflet/leaflet.css
+++ b/leaflet/leaflet.css
@@ -81,13 +81,11 @@
 
 .leaflet-control {
 	position: relative;
-	z-index: 7;
 	pointer-events: auto;
 	}
 .leaflet-top,
 .leaflet-bottom {
-	position: absolute;
-	z-index: 1000;
+	position: absolute; 
 	pointer-events: none;
 	}
 .leaflet-top {
